--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,109 +22,131 @@
 
     <title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <style>
-        *{
+        * {
             font-family: 'Do Hyeon', sans-serif;
         }
-        .wrap{
+
+        .wrap {
             width: 900px;
             margin: auto;
         }
-        .comment{
+
+        .comment {
             color: blue;
             font-weight: bold;
             margin-top: 20px;
             margin-bottom: 20px;
         }
-        .article{
+
+        .article {
             margin: 0px auto 20px auto;
             width: 450px;
             height: 300px;
             border-radius: 10px;
             border: solid;
             padding: 30px;
+
+            display: none;
         }
     </style>
     <script>
-        function hey(){
-            alert('안녕!');
+        let num = 0;
+
+        function open_close() {
+            let status = $('#post-box').css('display');
+            if(status == 'block'){
+                $('#post-box').hide();
+                $('#btn-posting-box').text('포스팅 박스 열기')
+            }
+            else{
+                $('#post-box').show();
+                $('#btn-posting-box').text('포스팅 박스 닫기')
+            }
         }
     </script>
 </head>
 
 <body class="wrap">
-    <div class="jumbotron">
+<div class="jumbotron">
     <h1 class="display-4">나홀로 링크 메모장!</h1>
     <p class="lead">중요한 링크를 저장해두고, 나중에 볼 수 있는 공간입니다</p>
     <hr class="my-4">
     <p class="lead">
-        <a onclick="hey()"  class="btn btn-primary btn-lg" href="#" role="button">포스팅박스 열기</a>
+        <a onclick="open_close()" id = "btn-posting-box" class="btn btn-primary btn-lg" href="#" role="button">포스팅박스 열기</a>
     </p>
 </div>
-    <div class="article">
-        <div class="form-group">
-            <label for="exampleInputEmail1">아티클 URL</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-            <p>간단 코멘트</p>
-            <textarea class="form-control"></textarea>
-        </div>
-
-        <button  class="btn btn-primary">기사 저장</button>
+<div class="article" id = "post-box">
+    <div class="form-group">
+        <label>아티클 URL</label>
+        <input type="email" class="form-control" id="article-url" aria-describedby="emailHelp">
     </div>
-    <div class="card-columns">
-        <div class="card ">
-            <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg" alt="Card image cap">
-            <div class="card-body">
-                <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
-                <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
-                <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-            </div>
+    <div class="form-group">
+        <p>간단 코멘트</p>
+        <textarea class="form-control"></textarea>
+    </div>
+
+    <button class="btn btn-primary">기사 저장</button>
+</div>
+<div class="card-columns" id ='card-box'>
+    <div class="card ">
+        <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg"
+             alt="Card image cap">
+        <div class="card-body">
+            <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
+            <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
+            <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
         </div>
-        <div class="card ">
-            <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg" alt="Card image cap">
-            <div class="card-body">
-                <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
-                <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
-                <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-            </div>
+    </div>
+    <div class="card ">
+        <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg"
+             alt="Card image cap">
+        <div class="card-body">
+            <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
+            <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
+            <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
         </div>
-        <div class="card ">
-            <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg" alt="Card image cap">
-            <div class="card-body">
-                <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
-                <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
-                <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-            </div>
+    </div>
+    <div class="card ">
+        <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg"
+             alt="Card image cap">
+        <div class="card-body">
+            <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
+            <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
+            <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
         </div>
-        <div class="card ">
-            <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg" alt="Card image cap">
-            <div class="card-body">
-                <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
-                <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
-                <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-            </div>
+    </div>
+    <div class="card ">
+        <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg"
+             alt="Card image cap">
+        <div class="card-body">
+            <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
+            <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
+            <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
         </div>
-        <div class="card ">
-            <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg" alt="Card image cap">
-            <div class="card-body">
-                <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
-                <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
-                <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-            </div>
+    </div>
+    <div class="card ">
+        <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg"
+             alt="Card image cap">
+        <div class="card-body">
+            <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
+            <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
+            <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
         </div>
-        <div class="card ">
-            <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg" alt="Card image cap">
-            <div class="card-body">
-                <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
-                <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
-                <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
-            </div>
+    </div>
+    <div class="card ">
+        <img class="card-img-top" src="https://cdn.kihoilbo.co.kr/news/photo/201902/792241_247400_4056.jpg"
+             alt="Card image cap">
+        <div class="card-body">
+            <a class="card-title" href="https://naver.com">여기 기사 제목이 들어가죠</a>
+            <p class="card-text">기사의 요약 내용이 들어갑니다. 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산...</p>
+            <p class="card-text comment">여기에 코멘트가 들어갑니다.</p>
         </div>
+    </div>
 
 </div>
 
