--- a/frontend/02_Ajex_quiz03.html
+++ b/frontend/02_Ajex_quiz03.html
@@ -17,6 +17,10 @@
     </style>
 
     <script>
+
+      $(document).ready(function () {
+        alert('다 로딩됐다!')
+      });
       function q1() {
         $.ajax({
           type: "GET",
